--- a/index.html
+++ b/index.html
@@ -3,67 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio | ALESSANDRO DOS SANTOS DA CONCEIÇÃO</title>
+    <title>Portfólio | Alessandro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <h1>Sandro</h1>
-    <p>Desenvolvedor Front-End em formação</p>
-    <a href="https://wa.me/5599991508899" class="btn-header" target="_blank">
-        Falar no WhatsApp
-    </a>
+    <h1 class="nome">ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
+
+    <p class="descricao">
+        Estudante de Análise e Desenvolvimento de Sistemas • Desenvolvedor Front-End em formação
+    </p>
+
+    <p class="telefone">
+        📞 (99) 99150-8899
+    </p>
 </header>
 
-<section class="sobre">
-    <h2>Sobre mim</h2>
-    <p>
-        Estudante em Análise Desenvolvimento de Sistema, Tecnologia da Informação focado em desenvolvimento web.
-        Buscando oportunidade de estágio para aplicar minhas habilidades em HTML, CSS e JavaScript.
-    </p>
-</section>
-
 <section class="projetos">
-    <h2>Meus Projetos</h2>
+    <h2>🚀 Meus Projetos</h2>
 
-    <!-- CALCULADORA -->
-    <div class="card">
-        <h3>🧮 Calculadora</h3>
-        <p>Calculadora funcional feita com HTML, CSS e JavaScript.</p>
-        <a href="file:///C:/calculadora-js/index.html" target="_blank">Ver Projeto</a>
+    <div class="container">
+
+        <div class="card">
+            <h3>🧮 Calculadora</h3>
+            <p>Calculadora funcional feita com HTML, CSS e JavaScript.</p>
+            <a href="../calculadora-js/index.html">
+                Acessar Projeto
+            </a>
+        </div>
+
+        <div class="card">
+            <h3>📋 Lista de Tarefas</h3>
+            <p>Aplicação para organização de tarefas.</p>
+            <a href="../lista-tarefas/index.html">
+                Acessar Projeto
+            </a>
+        </div>
+
+        <div class="card">
+            <h3>🔐 Tela de Login</h3>
+            <p>Interface moderna de autenticação.</p>
+            <a href="../Login-simples/index.html">
+                Acessar Projeto
+            </a>
+        </div>
+
+        <div class="card">
+            <h3>💰 Conversor de Moedas</h3>
+            <p>Conversor com JavaScript.</p>
+            <a href="../Conversor-moedas/index.html">
+                Acessar Projeto
+            </a>
+        </div>
+
     </div>
-
-    <!-- LISTA DE TAREFAS -->
-    <div class="card">
-        <h3>📋 Lista de Tarefas</h3>
-        <p>Aplicação com adição e remoção dinâmica de tarefas.</p>
-        <a href="file:///C:/lista-tarefas/index.html" target="_blank">Ver Projeto</a>
-    </div>
-
-    <!-- LOGIN -->
-    <div class="card">
-        <h3>🔐 Tela de Login</h3>
-        <p>Interface moderna de autenticação de usuário.</p>
-        <a href="file:///C:/Login-simples/index.html" target="_blank">Ver Projeto</a>
-    </div>
-
-    <!-- CONVERSOR -->
-    <div class="card">
-        <h3>💰 Conversor de Moedas</h3>
-        <p>Conversor de Real para Dólar usando JavaScript.</p>
-        <a href="file:///C:/Conversor-moedas/index.html" target="_blank">Ver Projeto</a>
-    </div>
-
 </section>
 
 <footer>
-    <p>© 2026 - Alessandro | Desenvolvedor Front-End</p>
+    <p>© 2026 - ALESSANDRO DOS SANTOS DA CONCEIÇÃO</p>
 </footer>
-
-<a href="https://wa.me/5599991508899" class="whatsapp-float" target="_blank">
-    💬
-</a>
 
 <script src="script.js"></script>
 </body>
