--- a/index.html
+++ b/index.html
@@ -1,69 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio | Alessandro</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Portfólio | Alessandro</title>
+
+<link rel="stylesheet" href="style.css">
+
+<!-- Fonte profissional -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-<header>
-    <h1 class="nome">ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
+<!-- HERO -->
+<section class="hero">
 
-    <p class="descricao">
-        Estudante de Análise e Desenvolvimento de Sistemas • Desenvolvedor Front-End em formação
-    </p>
+    <div class="hero-content">
+        <h1>ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
 
-    <p class="telefone">
-        📞 (99) 99150-8899
-    </p>
-</header>
+        <p class="subtitle">
+            Estudante de Análise e Desenvolvimento de Sistemas • Desenvolvedor Front-End em formação
+        </p>
 
-<section class="projetos">
-    <h2>🚀 Meus Projetos</h2>
+        <p class="phone">
+            📞 (99) 99150-8899
+        </p>
 
-    <div class="container">
+        <a class="whatsapp" 
+           href="https://wa.me/5599991508899" 
+           target="_blank">
+           Falar no WhatsApp
+        </a>
+    </div>
 
-        <div class="card">
+</section>
+
+<!-- HABILIDADES -->
+<section class="skills">
+
+    <h2>💻 Habilidades</h2>
+
+    <div class="skills-grid">
+        <div class="skill">HTML5</div>
+        <div class="skill">CSS3</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">Responsividade</div>
+        <div class="skill">Git & GitHub</div>
+        <div class="skill">UI Moderna</div>
+    </div>
+
+</section>
+
+<!-- PROJETOS -->
+<section class="projects">
+
+    <h2>🚀 Projetos</h2>
+
+    <div class="projects-grid">
+
+        <a href="../calculadora-js/" class="card">
             <h3>🧮 Calculadora</h3>
-            <p>Calculadora funcional feita com HTML, CSS e JavaScript.</p>
-            <a href="../calculadora-js/index.html">
-                Acessar Projeto
-            </a>
-        </div>
+            <p>Aplicação funcional com JavaScript puro.</p>
+        </a>
 
-        <div class="card">
+        <a href="../lista-tarefas/" class="card">
             <h3>📋 Lista de Tarefas</h3>
-            <p>Aplicação para organização de tarefas.</p>
-            <a href="../lista-tarefas/index.html">
-                Acessar Projeto
-            </a>
-        </div>
+            <p>Gerenciador de tarefas com manipulação de DOM.</p>
+        </a>
 
-        <div class="card">
+        <a href="../Login-simples/" class="card">
             <h3>🔐 Tela de Login</h3>
-            <p>Interface moderna de autenticação.</p>
-            <a href="../Login-simples/index.html">
-                Acessar Projeto
-            </a>
-        </div>
+            <p>Interface moderna focada em experiência do usuário.</p>
+        </a>
 
-        <div class="card">
+        <a href="../Conversor-moedas/" class="card">
             <h3>💰 Conversor de Moedas</h3>
-            <p>Conversor com JavaScript.</p>
-            <a href="../Conversor-moedas/index.html">
-                Acessar Projeto
-            </a>
-        </div>
+            <p>Projeto com lógica JavaScript e interações dinâmicas.</p>
+        </a>
 
     </div>
+
 </section>
 
 <footer>
-    <p>© 2026 - ALESSANDRO DOS SANTOS DA CONCEIÇÃO</p>
+© 2026 — ALESSANDRO DOS SANTOS DA CONCEIÇÃO  
+Desenvolvedor Front-End
 </footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
