--- a/index.html
+++ b/index.html
@@ -1,95 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Portfólio | Alessandro</title>
-
-<link rel="stylesheet" href="style.css">
-
-<!-- Fonte profissional -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio | Alessandro</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- HERO -->
-<section class="hero">
+<header>
+    <h1 class="nome">ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
 
-    <div class="hero-content">
-        <h1>ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
+    <p class="descricao">
+        Estudante de Análise e Desenvolvimento de Sistemas • Desenvolvedor Front-End em formação
+    </p>
 
-        <p class="subtitle">
-            Estudante de Análise e Desenvolvimento de Sistemas • Desenvolvedor Front-End em formação
-        </p>
-
-        <p class="phone">
+    <div class="contato">
+        <p class="telefone">
             📞 (99) 99150-8899
         </p>
 
-        <a class="whatsapp" 
-           href="https://wa.me/5599991508899" 
-           target="_blank">
-           Falar no WhatsApp
+        <a class="whatsapp-btn"
+        href="https://wa.me/559991508899?text=Olá%20Alessandro,%20vi%20seu%20portfólio%20e%20gostaria%20de%20falar%20sobre%20uma%20oportunidade."
+        target="_blank">
+        💬 Falar no WhatsApp
         </a>
     </div>
+</header>
 
-</section>
+<section class="projetos">
+    <h2>🚀 Meus Projetos</h2>
 
-<!-- HABILIDADES -->
-<section class="skills">
+    <div class="container">
 
-    <h2>💻 Habilidades</h2>
-
-    <div class="skills-grid">
-        <div class="skill">HTML5</div>
-        <div class="skill">CSS3</div>
-        <div class="skill">JavaScript</div>
-        <div class="skill">Responsividade</div>
-        <div class="skill">Git & GitHub</div>
-        <div class="skill">UI Moderna</div>
-    </div>
-
-</section>
-
-<!-- PROJETOS -->
-<section class="projects">
-
-    <h2>🚀 Projetos</h2>
-
-    <div class="projects-grid">
-
-        <a href="../calculadora-js/" class="card">
+        <div class="card">
             <h3>🧮 Calculadora</h3>
-            <p>Aplicação funcional com JavaScript puro.</p>
-        </a>
+            <p>Calculadora funcional feita com HTML, CSS e JavaScript.</p>
+            <a href="../calculadora-js/index.html" target="_blank">
+                Acessar Projeto
+            </a>
+        </div>
 
-        <a href="../lista-tarefas/" class="card">
+        <div class="card">
             <h3>📋 Lista de Tarefas</h3>
-            <p>Gerenciador de tarefas com manipulação de DOM.</p>
-        </a>
+            <p>Aplicação para organização de tarefas.</p>
+            <a href="../lista-tarefas/index.html" target="_blank">
+                Acessar Projeto
+            </a>
+        </div>
 
-        <a href="../Login-simples/" class="card">
+        <div class="card">
             <h3>🔐 Tela de Login</h3>
-            <p>Interface moderna focada em experiência do usuário.</p>
-        </a>
+            <p>Interface moderna de autenticação.</p>
+            <a href="../login-simples/index.html" target="_blank">
+                Acessar Projeto
+            </a>
+        </div>
 
-        <a href="../Conversor-moedas/" class="card">
+        <div class="card">
             <h3>💰 Conversor de Moedas</h3>
-            <p>Projeto com lógica JavaScript e interações dinâmicas.</p>
-        </a>
+            <p>Conversor com JavaScript.</p>
+            <a href="../conversor-moedas/index.html" target="_blank">
+                Acessar Projeto
+            </a>
+        </div>
 
     </div>
-
 </section>
 
 <footer>
-© 2026 — ALESSANDRO DOS SANTOS DA CONCEIÇÃO  
-Desenvolvedor Front-End
+    <p>© 2026 - ALESSANDRO DOS SANTOS DA CONCEIÇÃO</p>
 </footer>
 
 <script src="script.js"></script>
-
 </body>
 </html>
