--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     </p>
 
     <div class="contato">
-        <p class="telefone">
-            📞 (99) 99150-8899
-        </p>
+        <p class="telefone">📞 (99) 99150-8899</p>
 
         <a class="whatsapp-btn"
         href="https://wa.me/559991508899?text=Olá%20Alessandro,%20vi%20seu%20portfólio%20e%20gostaria%20de%20falar%20sobre%20uma%20oportunidade."
@@ -36,7 +34,7 @@
         <div class="card">
             <h3>🧮 Calculadora</h3>
             <p>Calculadora funcional feita com HTML, CSS e JavaScript.</p>
-            <a href="../calculadora-js/index.html" target="_blank">
+            <a href="../projetos/calculadora-js/" target="_blank">
                 Acessar Projeto
             </a>
         </div>
@@ -44,7 +42,7 @@
         <div class="card">
             <h3>📋 Lista de Tarefas</h3>
             <p>Aplicação para organização de tarefas.</p>
-            <a href="../lista-tarefas/index.html" target="_blank">
+            <a href="../projetos/lista-tarefas-js/" target="_blank">
                 Acessar Projeto
             </a>
         </div>
@@ -52,7 +50,7 @@
         <div class="card">
             <h3>🔐 Tela de Login</h3>
             <p>Interface moderna de autenticação.</p>
-            <a href="../login-simples/index.html" target="_blank">
+            <a href="../projetos/login-js/" target="_blank">
                 Acessar Projeto
             </a>
         </div>
@@ -60,7 +58,7 @@
         <div class="card">
             <h3>💰 Conversor de Moedas</h3>
             <p>Conversor com JavaScript.</p>
-            <a href="../conversor-moedas/index.html" target="_blank">
+            <a href="../projetos/conversor-moedas-js/" target="_blank">
                 Acessar Projeto
             </a>
         </div>
