--- a/index.html
+++ b/index.html
@@ -1,75 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio | Alessandro</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Portfólio - Alessandro</title>
+
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-    <h1 class="nome">ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
 
-    <p class="descricao">
-        Estudante de Análise e Desenvolvimento de Sistemas • Desenvolvedor Front-End em formação
-    </p>
+<h1>ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
+<p>Estudante de Análise e Desenvolvimento de Sistemas</p>
 
-    <div class="contato">
-        <p class="telefone">📞 (99) 99150-8899</p>
-
-        <a class="whatsapp-btn"
-        href="https://wa.me/559991508899?text=Olá%20Alessandro,%20vi%20seu%20portfólio%20e%20gostaria%20de%20falar%20sobre%20uma%20oportunidade."
-        target="_blank">
-        💬 Falar no WhatsApp
-        </a>
-    </div>
 </header>
 
-<section class="projetos">
-    <h2>🚀 Meus Projetos</h2>
 
-    <div class="container">
+<section class="menu">
 
-        <div class="card">
-            <h3>🧮 Calculadora</h3>
-            <p>Calculadora funcional feita com HTML, CSS e JavaScript.</p>
-            <a href="../projetos/calculadora-js/" target="_blank">
-                Acessar Projeto
-            </a>
-        </div>
+<a href="./calculadora-js/index.html" target="_blank">🧮 Calculadora</a>
 
-        <div class="card">
-            <h3>📋 Lista de Tarefas</h3>
-            <p>Aplicação para organização de tarefas.</p>
-            <a href="../projetos/lista-tarefas-js/" target="_blank">
-                Acessar Projeto
-            </a>
-        </div>
+<a href="./lista-tarefas/index.html" target="_blank">📋 Lista de Tarefas</a>
 
-        <div class="card">
-            <h3>🔐 Tela de Login</h3>
-            <p>Interface moderna de autenticação.</p>
-            <a href="../projetos/login-js/" target="_blank">
-                Acessar Projeto
-            </a>
-        </div>
+<a href="./Conversor-moedas/index.html" target="_blank">💰 Conversor de Moedas</a>
 
-        <div class="card">
-            <h3>💰 Conversor de Moedas</h3>
-            <p>Conversor com JavaScript.</p>
-            <a href="../projetos/conversor-moedas-js/" target="_blank">
-                Acessar Projeto
-            </a>
-        </div>
+<a href="./Login-simples/index.html" target="_blank">🔐 Login</a>
 
-    </div>
 </section>
 
+
+<section class="contato">
+
+<h2>Contato</h2>
+
+<a 
+class="whatsapp"
+href="https://wa.me/5599991508899"
+target="_blank">
+Falar no WhatsApp
+</a>
+
+<p>Telefone: (99) 99915-08899</p>
+
+</section>
+
+
 <footer>
-    <p>© 2026 - ALESSANDRO DOS SANTOS DA CONCEIÇÃO</p>
+
+<p>© 2026 - Alessandro dos Santos da Conceição</p>
+
 </footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
