--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Portfólio - Alessandro</title>
+<title>Portfólio Profissional</title>
 
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,46 +12,40 @@
 <body>
 
 <header>
-
 <h1>ALESSANDRO DOS SANTOS DA CONCEIÇÃO</h1>
 <p>Estudante de Análise e Desenvolvimento de Sistemas</p>
-
 </header>
 
 
-<section class="menu">
+<nav class="menu">
 
-<a href="./calculadora-js/index.html" target="_blank">🧮 Calculadora</a>
+<a href="./calculadora-js/">Calculadora</a>
 
-<a href="./lista-tarefas/index.html" target="_blank">📋 Lista de Tarefas</a>
+<a href="./lista-tarefas/">Lista de Tarefas</a>
 
-<a href="./Conversor-moedas/index.html" target="_blank">💰 Conversor de Moedas</a>
+<a href="./conversor-moedas/">Conversor de Moedas</a>
 
-<a href="./Login-simples/index.html" target="_blank">🔐 Login</a>
+<a href="./login-simples/">Login</a>
 
-</section>
+</nav>
 
 
 <section class="contato">
 
 <h2>Contato</h2>
 
-<a 
-class="whatsapp"
+<a class="whatsapp"
 href="https://wa.me/5599991508899"
 target="_blank">
 Falar no WhatsApp
 </a>
 
-<p>Telefone: (99) 99915-08899</p>
+<p>(99) 99915-08899</p>
 
 </section>
 
-
 <footer>
-
 <p>© 2026 - Alessandro dos Santos da Conceição</p>
-
 </footer>
 
 <script src="script.js"></script>
